--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -62,13 +62,15 @@
 
     <TextView
         android:id="@+id/name1"
-        android:layout_width="194dp"
-        android:layout_height="44dp"
+        android:layout_width="174dp"
+        android:layout_height="35dp"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.02" />
+        app:layout_constraintVertical_bias="0.055" />
 </androidx.constraintlayout.widget.ConstraintLayout>
